# example/app/cmd/api/swaggerui/swagger.json
@@ -56,12 +56,16 @@
               ],
               "properties": {
                 "email": {
+                  "description": "Email address.",
                   "type": "string",
-                  "x-go-name": "Email"
+                  "x-go-name": "Email",
+                  "example": "jsmith@example.com"
                 },
                 "password": {
+                  "description": "Password.",
                   "type": "string",
-                  "x-go-name": "Password"
+                  "x-go-name": "Password",
+                  "example": "password"
                 }
               }
             }
@@ -70,6 +74,67 @@
         "responses": {
           "200": {
             "$ref": "#/responses/LoginResponse"
+          },
+          "400": {
+            "$ref": "#/responses/BadRequestResponse"
+          },
+          "500": {
+            "$ref": "#/responses/InternalServerErrorResponse"
+          }
+        }
+      }
+    },
+    "/api/v1/register": {
+      "post": {
+        "tags": [
+          "authentication"
+        ],
+        "summary": "Register a user.",
+        "operationId": "UserRegister",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "required": [
+                "first_name",
+                "last_name",
+                "email",
+                "password"
+              ],
+              "properties": {
+                "email": {
+                  "description": "Email address.",
+                  "type": "string",
+                  "x-go-name": "Email",
+                  "example": "jsmith@example.com"
+                },
+                "first_name": {
+                  "description": "First name.",
+                  "type": "string",
+                  "x-go-name": "FirstName",
+                  "example": "John"
+                },
+                "last_name": {
+                  "description": "Last name.",
+                  "type": "string",
+                  "x-go-name": "LastName",
+                  "example": "Smith"
+                },
+                "password": {
+                  "description": "Password.",
+                  "type": "string",
+                  "x-go-name": "Password",
+                  "example": "password"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/responses/RegisterResponse"
           },
           "400": {
             "$ref": "#/responses/BadRequestResponse"
@@ -165,7 +230,7 @@
                 "description": "Token contains the API token for authentication",
                 "type": "string",
                 "x-go-name": "Token",
-                "example": "api-123456"
+                "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiIwNWE3ZjlmYS1mN2ViLTIzNmItYjJiYi1iYTE0NWUwYTRhMmQiLCJleHAiOjE2MDU2MTQ1NzEsImp0aSI6IjA0MjQ0Yzc4LTU5MzItYTBjZS1lMjAzLTc3MmNiMDVhYmFhZiIsImlhdCI6MTYwNTU4NTc3MSwibmJmIjoxNjA1NTg1NzcxfQ.kAeCynxCh35moPf5OEsn7LW0oHNEBVWxVOiZ6RdyUwk"
               }
             },
             "x-go-name": "Data"
@@ -246,6 +311,46 @@
             "type": "string",
             "x-go-name": "StatusMessage",
             "example": "OK"
+          }
+        }
+      }
+    },
+    "RegisterResponse": {
+      "description": "RegisterResponse returns a user ID.",
+      "schema": {
+        "type": "object",
+        "required": [
+          "status_code",
+          "status_message"
+        ],
+        "properties": {
+          "data": {
+            "type": "object",
+            "required": [
+              "record_id"
+            ],
+            "properties": {
+              "record_id": {
+                "description": "RecordID containers the newly created user ID.",
+                "type": "string",
+                "x-go-name": "RecordID",
+                "example": "314445cd-e9fb-4c58-58b6-777ee06465f5"
+              }
+            },
+            "x-go-name": "Data"
+          },
+          "status_code": {
+            "description": "Code contains the HTTP status code.",
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "StatusCode",
+            "example": 201
+          },
+          "status_message": {
+            "description": "Status contains the string of the HTTP status.",
+            "type": "string",
+            "x-go-name": "StatusMessage",
+            "example": "Created"
           }
         }
       }
