# example/app/endpoint/login.go
@@ -8,7 +8,7 @@ import (
 	"github.com/josephspurrier/octane/example/app/store"
 )
 
-// Login .
+// Login -
 // swagger:route POST /api/v1/login authentication UserLogin
 //
 // Authenticate a user.
@@ -22,8 +22,12 @@ func Login(c *app.Context) (err error) {
 	type Request struct {
 		// in: body
 		Body struct {
+			// Email address.
+			// example: jsmith@example.com
 			// required: true
 			Email string `json:"email" validate:"required,email"`
+			// Password.
+			// example: password
 			// required: true
 			Password string `json:"password" validate:"required"`
 		}
@@ -33,21 +37,6 @@ func Login(c *app.Context) (err error) {
 	req := new(Request)
 	if err = c.Bind(req); err != nil {
 		return c.BadRequestResponse(err.Error())
-	}
-
-	// LoginResponse returns a token.
-	// swagger:response LoginResponse
-	type LoginResponse struct {
-		// in: body
-		Body struct {
-			octane.CommonStatusFields
-			Data struct {
-				// Token contains the API token for authentication
-				// example: api-123456
-				// required: true
-				Token string `json:"token"`
-			} `json:"data"`
-		}
 	}
 
 	// Check if user exists.
@@ -62,6 +51,21 @@ func Login(c *app.Context) (err error) {
 	// Check user password.
 	if !c.Passhash.Match(user.Password, req.Body.Password) {
 		return c.BadRequestResponse("login information does not match")
+	}
+
+	// LoginResponse returns a token.
+	// swagger:response LoginResponse
+	type LoginResponse struct {
+		// in: body
+		Body struct {
+			octane.OKStatusFields
+			Data struct {
+				// Token contains the API token for authentication
+				// example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdWQiOiIwNWE3ZjlmYS1mN2ViLTIzNmItYjJiYi1iYTE0NWUwYTRhMmQiLCJleHAiOjE2MDU2MTQ1NzEsImp0aSI6IjA0MjQ0Yzc4LTU5MzItYTBjZS1lMjAzLTc3MmNiMDVhYmFhZiIsImlhdCI6MTYwNTU4NTc3MSwibmJmIjoxNjA1NTg1NzcxfQ.kAeCynxCh35moPf5OEsn7LW0oHNEBVWxVOiZ6RdyUwk
+				// required: true
+				Token string `json:"token"`
+			} `json:"data"`
+		}
 	}
 
 	data := new(LoginResponse).Body.Data
